# openenv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  score_utils.py  server.py
env/: __init__.py  base_env.py  reward.py  schemas.py  utils.py
server/: app.py
tasks/code_review/: buggy_code.py  grader.py  task.py
tasks/data_cleaning/: dataset.csv  grader.py  task.py
tasks/email_triage/: data.json  grader.py  task.py
tests/: test_env.py
