[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-realworld-sim"
version = "1.0.0"
description = "OpenEnv-compatible real-world benchmark for evaluating LLM agents on email triage, data cleaning, and code review tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "openai>=2.7.2,<3.0.0",
    "pytest>=8.2.0,<9.0.0",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".pytest_cache", "pytest-cache-files-*"]
